--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="./style.css">
+        <script defer src="./javascript.js"></script>
     </head>
 
     <body>
-        <script src="./javascript.js"></script>
+        <h1>Rock Paper Scissors!</h1>
+        <h2>First to reach 5 points wins!</h2>
+        <div class="options">
+            <button id="rock"><img src="https://img.freepik.com/premium-vector/gray-boulder-cartoon-rock-icon-natural-element_543062-4393.jpg" alt="A Rock"></button>
+            <button id="paper"><img src="https://www.clker.com/cliparts/5/6/2/0/1194984467464538364carta_architetto_frances_01.svg.med.png" alt="Paper"></button>
+            <button id="scissors"><img src="https://static.vecteezy.com/system/resources/previews/004/606/141/original/simple-cartoon-icon-scissors-on-a-white-background-cartoon-vector.jpg" alt="Scissors"></button>
+        </div>
+        <p></p>
+        <p id="scores"></p>
+        
     </body>
 </html>
